fix spacing

--- a/src/styles/players-details.scss
+++ b/src/styles/players-details.scss
@@ -7,13 +7,13 @@
 
   &--white {
     position: absolute;
-    top: -40%;
+    top: -20%;
     transform: translateY(-50%);
   }
 
   &--black {
     position: absolute;
-    top: 140%;
+    top: 120%;
     transform: translateY(-50%);
   }
 
